--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,16 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
     "configurations": [
-        
         {
-            "name": "(lldb) Launch",
+            "name": "(lldb) Attach",
             "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": true,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
+            "request": "attach",
+            "program": "enter program name, for example ${workspaceFolder}/a.out",
             "MIMode": "lldb"
         }
-    ],
-    "version": "2.0.0"
+
+    ]
 }
