--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,19 @@
             "request": "attach",
             "program": "enter program name, for example ${workspaceFolder}/a.out",
             "MIMode": "lldb"
+        },
+        {
+            "name": "C/C++: clang++ build and debug active file",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+            "preLaunchTask": "C/C++: clang++ build active file"
         }
 
     ]
