--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ Programmi C++/.DS_Store
 .DS_Store
 .DS_Store
 .DS_Store
+*.exe
+
+*/c_cpp_properties.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/c_cpp_properties.json
+.vscode/c_cpp_properties.json
