--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,4 @@ Programmi C++/.DS_Store
 .DS_Store
 *.exe
 
-*/c_cpp_properties.json
-.vscode/settings.json
-.vscode/tasks.json
-.vscode/c_cpp_properties.json
-.vscode/c_cpp_properties.json
+*.vscode*
