--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ Programmi C++/.DS_Store
 
 *.vscode*
 .vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/launch.json
+.vscode/settings.json
+.vscode/launch.json
+.vscode/launch.json
+.vscode/settings.json
+.vscode/launch.json
+.vscode/settings.json
