--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,7 @@
 Programmi C++/.DS_Store
 *.DS_Store*
 .DS_Store
-.DS_Store
-.DS_Store
-.DS_Store
-.DS_Store
-.DS_Store
-*.exe
-
-*.vscode*
 .vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/launch.json
-.vscode/settings.json
-.vscode/launch.json
-.vscode/launch.json
-.vscode/settings.json
+.vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/settings.json
