--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Programmi C++/.DS_Store
 .vscode/launch.json
 .vscode/settings.json
 *.class*
+.DS_Store
+Progetto01/TestApp/bin/data/.LCKSomma.java~
